add stats feature